.argocd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shuru
spec:
  ports:
    - protocol: TCP
      port: 80
