.argocd/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: shuru
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`shuru.192.168.0.101.nip.io`)
      kind: Rule
      services:
        - name: shuru
          port: 80
